# Project_VC_5

./: .gitignore  README.md
Firmware/: VC5.code-workspace
Firmware/VC5/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_support.cpp  MCP23017.cpp  MCP23017.h  VC5_RP2040.cpp  VC5_RP2040.h  VC5_config.h  VC5_global.h  VC5_usb_protocol.h  cmake_install.cmake  config.h  global.h  main.cpp  rotary.cpp  rotary.h  rotary_bank.cpp  rotary_bank.h  tusb_config.h  usb_cmd_processor.cpp  usb_cmd_processor.h  usb_descriptors.cpp  usb_descriptors.h  usb_device.cpp  usb_device.h  usb_protocol.h
Hardware/schematic/VC5_schematic/: LEDs.kicad_sch  MCP2307_IO_expander.bak  MCU_Module.kicad_sym  VC5_display.kicad_sym  VC5_schematic.kicad_pcb  VC5_schematic.kicad_prl  VC5_schematic.kicad_pro  VC5_schematic.kicad_sch  displays.kicad_sch  fp-info-cache  fp-lib-table  rotaries.kicad_sch  sym-lib-table
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/: PEC11R-4220F-S0024.epw  part_info.txt
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/CADSTAR/: PEC11R-4220F-S0024.csa  PEC11R-4220F-S0024.lib  PEC11R4220FS0024.cpa
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/CR-8000/: PEC11R-4220F-S0024.cdf
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/Capture/: PEC11R-4220F-S0024.xml
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/CircuitStudio/: PEC11R-4220F-S0024.lbr
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/DEHDL/pec11r_4220f_s0024/part_table/: part.ptf
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/DesignSpark PCB/: PEC11R-4220F-S0024.dsl
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/DipTrace/: PEC11R-4220F-S0024.asc
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/KiCad/: PEC11R-4220F-S0024.mod
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/OrCAD_Allegro16/: PEC11R-4220F-S0024.edf
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/PADS/: PEC11R-4220F-S0024.c  PEC11R-4220F-S0024.p
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/Proteus/: PEC11R-4220F-S0024.pdif  PEC11R-4220F-S0024.pdspart
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/Pulsonix/: PEC11R-4220F-S0024.plx
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/Quadcept/: PEC11R-4220F-S0024.xml
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/TARGET 3001!/: PEC11R-4220F-S0024.cxf
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/Xpedition/: cell.hkp  padstacks.hkp  pdb.hkp
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/eCADSTAR/: PEC11R-4220F-S0024.parta
Hardware/schematic/VC5_schematic/Bourns/PEC11R-4220F-S0024/xDX Designer/: PEC11R-4220F-S0024.1
Hardware/schematic/VC5_schematic/Bourns_PEC11R.pretty/: PEC11R4220FS0024.kicad_mod
Hardware/schematic/VC5_schematic/MCP23017_IO_expander.pretty/: MCP23017_IO_expander.kicad_mod
Hardware/schematic/VC5_schematic/RPI_Pico_THT.pretty/: RPi_Pico_SMD_TH.kicad_mod  RPi_Pico_THT.kicad_mod
Hardware/schematic/VC5_schematic/WS2812_LED_THT.pretty/: LED_D5.0mm-4_RGB.kicad_mod
Hardware/schematic/VC5_schematic/Waveshare_displays.pretty/: WaveShare_1in3_OLED_SH1106.kicad_mod
WinApp/: VC5.vcxproj  VC5Application.cpp  VC5Application.h  VC5Unit.h  VC5_app_config.h  VC5_global.h  WinUSBDevice.cpp  WinUSBDevice.h  WinUSBInterface.cpp  WinUSBInterface.h  WinUtils.h  main.cpp
